--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,58 @@
+anyio==4.10.0
+asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+contourpy==1.3.2
+cycler==0.12.1
 Django==4.2.7
+djangorestframework==3.16.1
+dotenv==0.9.9
+exceptiongroup==1.3.0
+filelock==3.19.1
+fonttools==4.59.2
+fsspec==2025.7.0
+fuzzywuzzy==0.18.0
+googletrans==4.0.2
+gunicorn==23.0.0
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
 Pillow==10.1.0
+polars==1.32.3
+psutil==7.0.0
+psycopg2-binary==2.9.11
+py-cpuinfo==9.0.0
+pydub==0.25.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+requests==2.32.5
+scipy==1.15.3
+six==1.17.0
+sniffio==1.3.1
+SpeechRecognition==3.14.3
+sqlparse==0.5.3
+sympy==1.14.0
+torch==2.4.1+cu121
+torchaudio==2.4.1+cu121
+torchvision==0.19.1+cu121
+typing_extensions==4.14.1
+tzdata==2025.2
+ultralytics-thop==2.0.16
+urllib3==2.5.0
+wfastcgi==3.0.0
+whitenoise==6.11.0
