--- a/requirements.txt
+++ b/requirements.txt
@@ -47,9 +47,9 @@ sniffio==1.3.1
 SpeechRecognition==3.14.3
 sqlparse==0.5.3
 sympy==1.14.0
-torch==2.4.1+cu121
-torchaudio==2.4.1+cu121
-torchvision==0.19.1+cu121
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
 typing_extensions==4.14.1
 tzdata==2025.2
 ultralytics-thop==2.0.16
